# Phalanx

./: README.md
backend/: Dockerfile.txt  agents.py  band_compactor_agent.py  band_ingestion_agent.py  band_security_agent.py  config.py  main.py  pipelines.py  proxy_client.py  pyproject.toml  requirements.txt  schemas.py  stats_agent.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: BandTranscript.jsx  Footer.jsx  LoadingScreen.jsx  Navbar.jsx  PipelineSimulator.jsx  PitchDeck.jsx  ShieldVisualiser.jsx  StatsExplorer.jsx  ThreatTable.jsx
frontend/src/pages/: BandDemo.jsx  CommandCentre.jsx  LandingPage.jsx  SocQueue.jsx  StatsPage.jsx
lobstertrap/: Makefile  README.md  claude.md  go.mod  go.sum  main.go
lobstertrap/cmd/: inspect.go  root.go  serve.go  test.go
lobstertrap/internal/audit/: logger.go  logger_test.go
lobstertrap/internal/dashboard/: handler.go  hub.go  ringbuffer.go  stats.go  types.go
lobstertrap/internal/dashboard/static/: dashboard.html
lobstertrap/internal/inspector/: classifier.go  inspector.go  inspector_test.go  patterns.go  risk.go
lobstertrap/internal/metadata/: mismatch.go  mismatch_test.go  types.go
lobstertrap/internal/pipeline/: pipeline.go  pipeline_test.go  result.go
lobstertrap/internal/policy/: loader.go  policy_test.go  table.go  types.go
lobstertrap/internal/proxy/: openai.go  proxy.go  proxy_test.go
lobstertrap/scripts/: test_prompts.sh
