[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
    "beautifulsoup4>=4.15.0",
    "google-cloud-aiplatform>=1.158.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.5",
    "openai>=2.42.0",
    "pydantic>=2.13.4",
]
